Worked with HTML headings

--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -6,7 +6,9 @@
     </head>
 
     <body>
-
+        <h1>📘 The Code Magazine</h1>
+        <h2>What is HTML?</h2>
+        <h3>Why should you learn HTML?</h3>
     </body>
 
 </html>
