--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -7,7 +7,8 @@
 
     <body>
         <h1>📘 The Code Magazine</h1>
-        <h2>What is HTML?</h2>
+        <h2>The Basic Language of the Web: HTML</h2>
+        <h3>What is HTML?</h3>
         <h3>Why should you learn HTML?</h3>
     </body>
 
