--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -8,16 +8,17 @@
     <body>
         <h1>📘 The Code Magazine</h1>
         <h2>The Basic Language of the Web: HTML</h2>
-        <p>Posted by Laura Jones on Monday, June 21st 2027
+        <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
         </p>
-        <p>All modern websites and web applications are built using three fundamental technologies: HTML, CSS and
+        <p>All modern websites and web applications are built using three <em>fundamental</em> technologies: HTML, CSS and
             JavaScript.
             These are the languages of the web.
         </p>
         <p>In this post, let's focus on HTML. We will learn what HTML is all about, and why you too should learn it.
         </p>
         <h3>What is HTML?</h3>
-        <p>HTML stands for HyperText Markup Language. It's a markup language that web developers use to structure and describe
+        <p>HTML stands for <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage. It's a
+            markup language that web developers use to structure and describe
             the
             content of a webpage (not a programming language).
         </p>
