--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -8,8 +8,10 @@
     <body>
         <h1>📘 The Code Magazine</h1>
         <h2>The Basic Language of the Web: HTML</h2>
+        <img src="laura-jones.jpg" alt="Laura Photo" width="74" height="74" />
         <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
         </p>
+        <img src="post-img.jpg" alt="Post Image" width="500" height="200">
         <p>All modern websites and web applications are built using three <em>fundamental</em> technologies: HTML, CSS
             and
             JavaScript.
