--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>📘 The Code Magazine</h1>
+        <a href="blog.html">Blog</a>
+        <a href="#">Challenges</a>
+        <a href="#">Flexbox</a>
+        <a href="#">CSS Grid</a>
+
         <h2>The Basic Language of the Web: HTML</h2>
         <img src="laura-jones.jpg" alt="Laura Photo" width="74" height="74" />
         <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
@@ -37,6 +42,9 @@
             <li>The closing tag</li>
             <li>The actual element</li>
         </ol>
+        <p>You can learn more at the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN Web
+                Docs</a>.
+        </p>
         </p>
         <h3>Why should you learn HTML?</h3>
         <p>There are countless reasons for learning the fundamental language of the web. Here are 5 of them:
