--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -14,7 +14,7 @@
                 <a href="#">Flexbox</a>
                 <a href="#">CSS Grid</a>
             </nav>
-            </header>
+        </header>
 
         <article>
             <header>
@@ -24,7 +24,7 @@
                 </p>
                 <img src="post-img.jpg" alt="Post Image" width="500" height="200">
             </header>
-            
+
             <p>All modern websites and web applications are built using three <em>fundamental</em> technologies: HTML,
                 CSS
                 and
@@ -67,22 +67,30 @@
                 <li>To have fun 😃</li>
             </ul>
             <p>Hopefully you learned something new here. See you next time!</p>
-            <h4>Related posts</h4>
-            <ul>
-                <li><img src="related-1.jpg" alt="Related 1" width="150" height="150"> <a href="#"> How to Learn Web
-                        Development</a></li>
-                <p>By Jonas Schmedtmann</p>
-                <li><img src="related-2.jpg" alt="Related 1" width="150" height="150"> <a href="#">The Unknown Powers of
-                        CSS</a></li>
-                <p>By Jim Dillon</p>
-                <li><img src="related-3.jpg" alt="Related 1" width="150" height="150"> <a href="#">Why JavaScript is
-                        Awesome</a></li>
-                <p>By Matilda</p>
-            </ul>
-            </article>
-            <footer>
-                <p>Copyright &COPY; 2023 by The Code Magazine</p>
-            </footer>
+            <aside>
+                <h4>Related posts</h4>
+                <ul>
+                    <li><img src="related-1.jpg" alt="Person programming" width="75" height="75"> <a href="#"> How to
+                            Learn Web
+                            Development</a>
+                        <p>By Jonas Schmedtmann</p>
+                    </li>
+                    <li><img src="related-2.jpg" alt="Lightning" width="75" height="75"> <a href="#">The Unknown Powers
+                            of
+                            CSS</a>
+                        <p>By Jim Dillon</p>
+                    </li>
+                    <li><img src="related-3.jpg" alt="JavaScript code on a screen" width="75" height="75"> <a href="#">Why JavaScript is
+                            Awesome</a>
+                        <p>By Matilda</p>
+                    </li>
+                </ul>
+            </aside>
+
+        </article>
+        <footer>
+            <p>Copyright &COPY; 2023 by The Code Magazine</p>
+        </footer>
 
     </body>
 
