--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -19,10 +19,10 @@
         <article>
             <header>
                 <h2>The Basic Language of the Web: HTML</h2>
-                <img src="laura-jones.jpg" alt="Laura Photo" width="74" height="74" />
+                <img src="images/laura-jones.jpg" alt="Laura Photo" width="74" height="74" />
                 <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
                 </p>
-                <img src="post-img.jpg" alt="Post Image" width="500" height="200">
+                <img src="images/post-img.jpg" alt="Post Image" width="500" height="200">
             </header>
 
             <p>All modern websites and web applications are built using three <em>fundamental</em> technologies: HTML,
@@ -70,17 +70,18 @@
             <aside>
                 <h4>Related posts</h4>
                 <ul>
-                    <li><img src="related-1.jpg" alt="Person programming" width="75" height="75"> <a href="#"> How to
+                    <li><img src="images/related-1.jpg" alt="Person programming" width="75" height="75"> <a href="#"> How to
                             Learn Web
                             Development</a>
                         <p>By Jonas Schmedtmann</p>
                     </li>
-                    <li><img src="related-2.jpg" alt="Lightning" width="75" height="75"> <a href="#">The Unknown Powers
+                    <li><img src="images/related-2.jpg" alt="Lightning" width="75" height="75"> <a href="#">The Unknown Powers
                             of
                             CSS</a>
                         <p>By Jim Dillon</p>
                     </li>
-                    <li><img src="related-3.jpg" alt="JavaScript code on a screen" width="75" height="75"> <a href="#">Why JavaScript is
+                    <li><img src="images/related-3.jpg" alt="JavaScript code on a screen" width="75" height="75"> <a href="#">Why JavaScript
+                            is
                             Awesome</a>
                         <p>By Matilda</p>
                     </li>
