--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <title>The Basic Language of the Web: HTML</title>
+    <style>
+      h1 {
+        color: blue;
+      }
+    </style>
   </head>
 
   <body>
@@ -16,7 +22,7 @@
     -->
 
     <header>
-      <h1 style="color: blue;">📘 The Code Magazine</h1>
+      <h1>📘 The Code Magazine</h1>
 
       <nav>
         <a href="blog.html">Blog</a>
@@ -30,21 +36,11 @@
       <header>
         <h2>The Basic Language of the Web: HTML</h2>
 
-        <img
-          src="img/laura-jones.jpg"
-          alt="Headshot of Laura Jones"
-          height="50"
-          width="50"
-        />
+        <img src="img/laura-jones.jpg" alt="Headshot of Laura Jones" height="50" width="50" />
 
         <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
 
-        <img
-          src="img/post-img.jpg"
-          alt="HTML code on a screen"
-          width="500"
-          height="200"
-        />
+        <img src="img/post-img.jpg" alt="HTML code on a screen" width="500" height="200" />
       </header>
 
       <p>
@@ -81,11 +77,7 @@
 
       <p>
         You can learn more at
-        <a
-          href="https://developer.mozilla.org/en-US/docs/Web/HTML"
-          target="_blank"
-          >MDN Web Docs</a
-        >.
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN Web Docs</a>.
       </p>
 
       <h3>Why should you learn HTML?</h3>
@@ -114,12 +106,7 @@
 
       <ul>
         <li>
-          <img
-            src="img/related-1.jpg"
-            alt="Person programming"
-            width="75"
-            width="75"
-          />
+          <img src="img/related-1.jpg" alt="Person programming" width="75" width="75" />
           <a href="#">How to Learn Web Development</a>
           <p>By Jonas Schmedtmann</p>
         </li>
@@ -129,12 +116,7 @@
           <p>By Jim Dillon</p>
         </li>
         <li>
-          <img
-            src="img/related-3.jpg"
-            alt="JavaScript code on a screen"
-            width="75"
-            height="75"
-          />
+          <img src="img/related-3.jpg" alt="JavaScript code on a screen" width="75" height="75" />
           <a href="#">Why JavaScript is Awesome</a>
           <p>By Matilda</p>
         </li>
@@ -143,4 +125,5 @@
 
     <footer>Copyright &copy; 2027 by The Code Magazine.</footer>
   </body>
+
 </html>
