--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -119,7 +119,9 @@
       </ul>
     </aside>
 
-    <footer>Copyright &copy; 2027 by The Code Magazine.</footer>
+    <footer>
+      <p>Copyright &copy; 2027 by The Code Magazine.</p>
+    </footer>
   </body>
 
 </html>
