--- a/03-CSS-Fundamentals/challenges/challenge.html
+++ b/03-CSS-Fundamentals/challenges/challenge.html
@@ -14,7 +14,8 @@
             <img src="challenges.jpg" alt="Shoe" width="250" height="250">
             <h4 class="price">$65.00</h4>
             <p class="shipping">Free shipping</p>
-            <p>Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe staple</p>
+            <p class="description">Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe
+                staple</p>
             <a class="more-info" href="#">More information &rarr;</a>
             <h4 class="product-details">Product details</h4>
             <ul class="product-list">
