--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -123,6 +123,7 @@
         <p id="copyright">Copyright &copy; 2027 by The Code Magazine.</p>
       </footer>
     </div>
+    <button> ❤️ Like</button>
   </body>
 
 </html>
