--- a/03-CSS-Fundamentals/challenges/challenge.html
+++ b/03-CSS-Fundamentals/challenges/challenge.html
@@ -11,12 +11,21 @@
     <body>
         <article class="product">
             <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
+            <p class="sale">SALE</p>
             <img src="challenges.jpg" alt="Shoe" width="250" height="250">
             <h4 class="price">$65.00</h4>
             <p class="shipping">Free shipping</p>
             <p class="description">Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe
                 staple</p>
             <a class="more-info" href="#">More information &rarr;</a>
+            <div class="colors">
+                <div class="color"></div>
+                <div class="color blue-color"></div>
+                <div class="color red-color"></div>
+                <div class="color orange-color"></div>
+                <div class="color green-color"></div>
+                <div class="color brown-color"></div>
+            </div>
             <h4 class="product-details">Product details</h4>
             <ul class="product-list">
                 <li>Lightweight, durable canvas sneaker</li>
@@ -26,5 +35,6 @@
             <button class="add-to-cart">Add to cart</button>
         </article>
     </body>
+
 
 </html>
