--- a/03-CSS-Fundamentals/challenges/challenge.html
+++ b/03-CSS-Fundamentals/challenges/challenge.html
@@ -12,7 +12,8 @@
         <article class="product">
             <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
             <p class="sale">SALE</p>
-            <img src="challenges.jpg" alt="Shoe" width="250" height="250">
+            <img src="challenges.jpg" alt="Shoe" width="250" height="250" class="product-img">
+            <div class="product-sale">
             <h4 class="price">$65.00</h4>
             <p class="shipping">Free shipping</p>
             <p class="description">Ready to dress up or down, these classic canvas Chucks are an everyday wardrobe
@@ -26,12 +27,15 @@
                 <div class="color green-color"></div>
                 <div class="color brown-color"></div>
             </div>
+            </div>
+            <div class="product-prop">
             <h4 class="product-details">Product details</h4>
             <ul class="product-list">
                 <li>Lightweight, durable canvas sneaker</li>
                 <li>Lightly padded footbed for added comfort</li>
                 <li>Iconic Chuck Taylor ankle patch</li>
             </ul>
+            </div>
             <button class="add-to-cart">Add to cart</button>
         </article>
     </body>
