--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -22,9 +22,9 @@
 
         <nav>
           <a href="blog.html">Blog</a>
-          <a href="#">Challenges</a>
-          <a href="#">Flexbox</a>
-          <a href="#">CSS Grid</a>
+          <a href="challenges/challenge.html">Challenges</a>
+          <a href="flexbox.html">Flexbox</a>
+          <a href="css-grid.html">CSS Grid</a>
         </nav>
       </header>
       <div class="row">
