--- a/03-CSS-Fundamentals/css-grid.html
+++ b/03-CSS-Fundamentals/css-grid.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,25 +10,32 @@
       .el--1 {
         background-color: blueviolet;
       }
+
       .el--2 {
         background-color: orangered;
       }
+
       .el--3 {
         background-color: green;
         height: 150px;
       }
+
       .el--4 {
         background-color: goldenrod;
       }
+
       .el--5 {
         background-color: palevioletred;
       }
+
       .el--6 {
         background-color: steelblue;
       }
+
       .el--7 {
         background-color: yellow;
       }
+
       .el--8 {
         background-color: crimson;
       }
@@ -41,15 +49,25 @@
 
         /* CSS GRID */
         display: grid;
-        grid-template-columns: 250px 250px 150px 150px;
-        grid-template-rows: 300px 200px;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 300fr 200fr;
         /* gap: 30px; */
         column-gap: 30px;
         row-gap: 60px;
+
+        display: none;
       }
 
+      .el--8 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+      .el--2 {
+        grid-column: 1 / 2;
+        grid-row:  2 / 3;
+      } 
+
       .container--2 {
-        display: none;
         /* STARTER */
         font-family: sans-serif;
         background-color: black;
@@ -60,9 +78,24 @@
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 250px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+
+        /* Aligning tracks inside container: 
+        distribute empty space */
+        align-content: center;
+        justify-content: center;
+
+        /* Aligning items INSIDE cells: moving items
+        around in the cell */
+        align-items: center;
+        justify-items: center;
       }
     </style>
   </head>
+
   <body>
     <div class="container--1">
       <div class="el el--1">(1) HTML</div>
@@ -84,4 +117,5 @@
       <div class="el el--7">(7)</div>
     </div>
   </body>
+
 </html>
