Reset the line-height

--- a/06-Components/1-accordion.html
+++ b/06-Components/1-accordion.html
@@ -32,6 +32,7 @@
             body {
                 font-family: 'Inter', sans-serif;
                 color: #343a40;
+                line-height: 1;
             }
         
             .accordion {
