--- a/06-Components/1-accordion.html
+++ b/06-Components/1-accordion.html
@@ -40,7 +40,9 @@
                 margin: 100px auto;
             }
 
-            .item {}
+            .item {
+                box-shadow: 0 0 32px rgba(0, 0, 0,0.1);
+            }
 
             .number,
             .text {
