--- a/06-Components/1-accordion.html
+++ b/06-Components/1-accordion.html
@@ -61,12 +61,12 @@
             .text {
                 font-size: 24px;
                 font-weight: 500;
-                color: #087f5b;
+                /* color: #087f5b; */
             }
 
-            /* .number{
+            .number{
                 color: #ced4da;
-            } */
+            }
 
             .icon {
                 width: 24px;
@@ -76,7 +76,7 @@
 
             .hidden-box {
                 grid-column: 2;
-                /* display: none; */
+                display: none;
             }
 
             .hidden-box p {
