--- a/06-Components/01-accordion.html
+++ b/06-Components/01-accordion.html
@@ -115,8 +115,8 @@
             <div class="item">
                 <p class="number">01</p>
                 <p class="text">Where are these chairs assembled?</p>
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                    class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="icon">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
                 </svg>
                 <div class="hidden-box">
@@ -151,14 +151,14 @@
                             laudantium maxime. </li>
                         <li>Ipsa, voluptates asperiores.</li>
                     </ul>
-                    </div>
-                    </div>
-                    
-                    <div class="item">
-                        <p class="number">03</p>
-                        <p class="text">Do you ship to countries outside EU?</p>
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-                    class="icon">
+                </div>
+            </div>
+
+            <div class="item">
+                <p class="number">03</p>
+                <p class="text">Do you ship to countries outside EU?</p>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="icon">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
                 </svg>
                 <div class="hidden-box">
