--- a/06-Components/02-carousel.html
+++ b/06-Components/02-carousel.html
@@ -7,7 +7,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Open+Sans:wght@300&display=swap"
             rel="stylesheet">
-        <title>Accordion Component</title>
+        <title>Carousel Component</title>
         <style>
             /*
                     SPACING SYSTEM (px)
@@ -34,10 +34,78 @@
                 color: #343a40;
                 line-height: 1;
             }
+
+            .carousel {
+                width: 800px;
+                background-color: #087f5b;
+                margin: 100px auto;
+                padding: 32px;
+                padding-left: 86px;
+                border-radius: 8px;
+                display: flex;
+                align-items: center;
+                gap: 86px;
+            }
+
+            img {
+                height: 200px;
+                border-radius: 8px;
+                transform: scale(1.5);
+                box-shadow: 0 12px 24px rgba(0,0,0,0.25);
+            }
+
+            .testimonial-text {
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 1.5;
+                margin-bottom: 32px;
+                color: #e6fcf5;
+            }
+
+            .testimonial-author {
+                font-size: 14px;
+                margin-bottom: 4px;
+                color: #c3fae8;
+            }
+
+            .testimonial-job {
+                font-size: 12px;
+                color: #c3fae8;
+            }
         </style>
     </head>
 
     <body>
+        <div class="carousel">
+            <img src="maria.jpg" alt="Maria de Almeida">
+            <blockquote class="testimonial">
+                <p class="testimonial-text">
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas a repudiandae facere
+                    exercitationem
+                    fugit, aperiam reprehenderit soluta dignissimos deleniti, laboriosam odio ab. Harum totam illum
+                    quasi
+                    ratione soluta iste dolorem."
+                </p>
+                <p class="testimonial-author">
+                    Maria de Almeida
+                </p>
+                <p class="testimonial-job">Senior Product Manager at EDP Commercial</p>
+            </blockquote>
+        
+            <button class="btn">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                    class="btn-icon">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
+                </svg>
+            </button>
+            <button class="btn">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                    class="btn-icon">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                </svg>
+        
+            </button>
+        </div>
     </body>
 
 </html>
