COmpleted hero section

--- a/06-Components/05-hero.html
+++ b/06-Components/05-hero.html
@@ -29,16 +29,38 @@
             }
 
             header {
-                background-color: aqua;
                 height: 100vh;
+                background-image: linear-gradient(rgba(34, 34, 34, 0.6), rgba(34, 34, 34, 0.6)), url(hero.jpg);
+                background-size: cover;
+                background-repeat: no-repeat;
+                position: relative;
+                color: #fff;
             }
 
             nav {
                 font-size: 20px;
                 font-weight: 700;
-                padding: 24px;
+                color: #fff;
+                padding-top: 32px;
                 display: flex;
                 justify-content: space-between;
+            }
+
+            .header-container {
+                width: 1200px;
+
+                position: absolute;
+
+                /* In relation to the PARENT sizef */
+                left: 50%;
+                top: 50%;
+
+                /* In relation to the ELEMENT size */
+                transform: translate(-50%, -50%);
+            }
+
+            .header-container-inner {
+                width: 50%;
             }
 
             h1 {
@@ -67,9 +89,9 @@
                 color: #fff;
                 padding: 16px 32px;
                 border-radius: 9px;
-                margin-bottom: 32px;
             }
-            section{
+
+            section {
                 padding: 96px 0;
             }
         </style>
@@ -81,13 +103,16 @@
                 <div>LOGO</div>
                 <div>NAVIGATION</div>
             </nav>
-            <div class="container">
-                <h1>A healthy meal delivered to your door, every single day.</h1>
-                <p>
-                    The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to your
-                    personal tastes and needs.
-                </p>
-                <a href="#" class="btn">Start eating well</a>
+            <div class="header-container">
+                <div class="header-container-inner">
+                    <h1>A healthy meal delivered to your door, every single day.</h1>
+                    <p>
+                        The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to
+                        your
+                        personal tastes and needs.
+                        </p>
+                        <a href="#" class="btn">Start eating well</a>
+                </div>
             </div>
         </header>
         <section>
