--- a/06-Components/06-app-layout.html
+++ b/06-Components/06-app-layout.html
@@ -25,7 +25,10 @@
                 grid-template-rows: 80px 1fr;
             }
 
-            nav,menu,section,main,aside{
+            nav,
+            section,
+            main,
+            aside {
                 padding-top: 24px;
             }
 
@@ -37,24 +40,78 @@
 
             menu {
                 background-color: #7048e8;
-                color: #fff;
                 grid-column: 2 / -1;
+                padding: 0 40px;
+
+                display: flex;
+                align-items: center;
+                gap: 12px;
             }
+
+            button {
+                display: inline-block;
+                font-size: 16px;
+                font-weight: bold;
+                background-color: #5f3dc4;
+                border: none;
+                color: #fff;
+                cursor: pointer;
+                padding: 8px 12px;
+            }
+
+            button:last-child {
+                background-color: #d6336c;
+                margin-left: auto;
+            }
+
 
             section {
                 background-color: #e9ecef;
+                padding: 40px;
+                overflow: scroll;
+
+                display: flex;
+                flex-direction: column;
+                gap: 12px;
             }
 
             aside {
                 background-color: #e9ecef;
+            }
+
+            .email {
+                background-color: #adb5bd;
+                height: 96px;
+                flex-shrink: 0;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         </style>
     </head>
 
     <body>
         <nav>Nav</nav>
-        <menu>Menu</menu>
-        <section>Inbox</section>
+        <menu>
+            <button>New</button>
+            <button>Reply</button>
+            <button>Forward</button>
+            <button>Mark unread</button>
+            <button>Trash</button>
+        </menu>
+        <section>
+            <div class="email">Email 1</div>
+            <div class="email">Email 2</div>
+            <div class="email">Email 3</div>
+            <div class="email">Email 4</div>
+            <div class="email">Email 5</div>
+            <div class="email">Email 6</div>
+            <div class="email">Email 7</div>
+            <div class="email">Email 8</div>
+            <div class="email">Email 9</div>
+            <div class="email">Email 10</div>
+        </section>
         <main>Email view</main>
         <aside>Additional info</aside>
     </body>
